fixes blog intro spacing

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -184,13 +184,10 @@
 		hyphens: auto;
 		line-height: 1.33em;
 		font-size: 1.2em;
-  	margin-bottom: 0;
+  	margin-bottom: 1.2em;
 	}
 	// 'BLOG' TEXT //
 	.blog_text {
-		p {
-			margin-bottom: 1.2em;
-		}
 		p + p {
 			text-indent: 0;
 		}
